finished mobile responsive coding

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <script src="script.js" defer></script>
     <title>Frontend Mentor | FAQ accordion</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
         text-align: center;
         padding-bottom: 10px;
+        position: relative;
+        bottom: 10px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -84,7 +85,12 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Jon Avila</a>.
+      >. Coded by
+      <a
+        href="https://www.frontendmentor.io/profile/madroosterlab"
+        target="_blank"
+        >Jon Avila</a
+      >.
     </div>
   </body>
 </html>
