fixed faq logo icon
it wasn't showing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div id="background-overlay"></div>
       <div class="card">
         <header>
-          <img class="faq-icon" src="/assets/images/icon-star.svg" />
+          <img class="faq-icon" src="assets/images/icon-star.svg" />
           <h1>FAQs</h1>
         </header>
         <button class="accordion">
